<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">计算器</string>
	<string name="action_settings">Settings</string>
	<string name="hello_world">Hello world!</string>
    <string name="zero">0</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="nine">9</string>
	<string name="perCent">%</string>
	<string name="divide">÷</string>
	<string name="multiply">×</string>
	<string name="add">+</string>
	<string name="sub">-</string>
	<string name="point">.</string>
	<string name="equal">=</string>
	<string name="transform">tra</string>
	<string name="squareRoot">√</string>
	<string name="degree">°</string>
	<string name="PI">π</string>
	<string name="log">lg</string>
	<string name="ln">ln</string>
	<string name="sin">sin</string>
	<string name="cos">cos</string>
	<string name="tan">tan</string>
	<string name="power">^</string>
	<string name="factorial">!</string>
	<string name="reciprocal">^(-1)</string>
	<string name="leftBra">(</string>
	<string name="rightBra">)</string>
	<string name="e">e</string>
	<string name="radian">rad</string>
	<string name="deg">deg</string>
</resources>
